apps/observer/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: observer-frontend-service
  namespace: observer
  labels:
    app: observer-frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: observer-frontend
